--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,9 @@ PythonAPI/pycocotools/_mask.so
 PythonAPI/pycocotools/coco.pyc
 PythonAPI/pycocotools/cocoeval.pyc
 PythonAPI/pycocotools/mask.pyc
+PythonAPI/build
+PythonAPI/dist
+PythonAPI/pycocotools.egg-info/
+PythonAPI/pr_curve.png
+PythonAPI/pycocotools/__pycache__/
+PythonAPI/pycocotools/*.so
